--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -616,6 +616,7 @@ section {
 #about {
   background: #fff;
   padding: 80px 0;
+  padding-bottom: 0;
 }
 
 #about .about-container .background {
@@ -654,6 +655,10 @@ section {
   padding: 0 0 30px 0;
 }
 
+.img-fluid {
+  margin: 0 10px;
+}
+
 #about .about-container .icon-box .icon {
   float: left;
   background: #fff;
@@ -689,7 +694,7 @@ section {
 #about .about-container .icon-box .description {
   margin-left: 80px;
   line-height: 24px;
-  font-size: 14px;
+  font-size: 18px;
 }
 #about img {
   max-width: 100%; 
