--- a/app_obras/templates/mostrar.html
+++ b/app_obras/templates/mostrar.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sobre Nosotros - Grupo Cero</title>
+  <title>Obras - Grupo Cero</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -100,34 +100,47 @@
     
     <!-- ======= Breadcrumbs Section ======= -->
 
-    <section class="page-section bg-light breadcrumbs" id="portfolio">
-      <div class="container">
-          <h2> Obras </h2><br>
   
+    <section class="page-section bg-light breadcrumbs" id="portfolio">
+        <div class="container">
+          <h2> Obras </h2><br>
+    
           <div class="row">
-              {% for obra in obras %}
-              <div class="col-12 col-md-4">
+            <div class="col-12 col-md-9">
+              <div class="row">
+                {% for obra in obras %}
+                <div class="col-12 col-md-4">
                   <div class="card text-center custom-card">
-                      {% if obra.imagen %}
-                          <img src="{{ obra.imagen.url }}" class="card-img-top mx-auto custom-img">
-                      {% else %}
-                          <img src="{% static 'assets/img/no_existe.png' %}" class="card-img-top mx-auto custom-img-no">
-                      {% endif %}
-                      <div class="card-body">
-                          <h4 class="card-title"> Código : {{ obra.idObra }}</h4>
-                          <p class="card-text">
-                              Título : {{ obra.titulo }}<br>
-                              Autor: {{ obra.autor }}<br>
-                          </p>
-                          <a href="{% url 'index' %}" class="btn btn-success">Ver Más</a>
-                        </div>
+                    {% if obra.imagen %}
+                    <img src="{{ obra.imagen.url }}" class="card-img-top mx-auto custom-img">
+                    {% else %}
+                    <img src="{% static 'assets/img/no_existe.png' %}" class="card-img-top mx-auto custom-img-no">
+                    {% endif %}
+                    <div class="card-body">
+                      <h4 class="card-title"> Código : {{ obra.idObra }}</h4>
+                      <p class="card-text">
+                        Título : {{ obra.titulo }}<br>
+                        Autor: {{ obra.autor }}<br>
+                        Precio: ${{ obra.precio }}<br>
+                      </p>
+                      <a href="{% url 'agregar' obra.idObra %}" class="btn btn-success">Agregar al carro</a>
+                      <br>
+                      <br>
+                      <a href="{% url 'index' %}" class="btn btn-outline-success">Ver Más</a>
                     </div>
+                  </div>
                 </div>
-              {% endfor %}
-           </div>
-      </div>
-  </section>
-  </main><!-- End #main -->
+                {% endfor %}
+              </div>
+            </div>
+            <div class="col-12 col-md-3">
+              {% include "carrito.html" %}
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    
 
   
   <!-- ======= Footer ======= -->
